<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mysh3ll.loginapi.MainActivity">

    <!--  Header Starts-->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@layout/header_gradient"
        android:paddingBottom="5dip"
        android:paddingTop="5dip"
        android:gravity="center">
        <!-- Logo Start-->
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_logo" />
        <!-- Logo Ends -->
    </LinearLayout>
    <!--  Header Ends -->

    <!-- Footer Start -->
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="90dip"
        android:layout_alignParentBottom="true"
        android:background="@layout/footer_repeat">

    </LinearLayout>
    <!-- Place footer next to header to set z-index property to minus value -->
    <!-- Footer Ends -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:layout_below="@+id/header"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="20dp"
                android:background="@mipmap/ic_edit_profile" />

            <TextView
                android:id="@+id/text_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_edit_profile" />

            <Button
                android:id="@+id/btn_password"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="50dp"
                android:background="@mipmap/ic_edit_password" />

            <TextView
                android:id="@+id/text_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_edit_password" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_order"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="20dp"
                android:background="@mipmap/ic_view_order" />

            <TextView
                android:id="@+id/text_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_view_order" />

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="50dp"
                android:background="@mipmap/ic_logout" />

            <TextView
                android:id="@+id/text_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_logout" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
