<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mysh3ll.loginapi.UserPasswordActivity">

    <!--  Header Starts-->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@layout/header_gradient"
        android:paddingBottom="5dip"
        android:paddingTop="5dip"
        android:gravity="center">
        <!-- Logo Start-->
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_logo" />
        <!-- Logo Ends -->
    </LinearLayout>
    <!--  Header Ends -->

    <!-- Footer Start -->
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="90dip"
        android:layout_alignParentBottom="true"
        android:background="@layout/footer_repeat">

    </LinearLayout>
    <!-- Place footer next to header to set z-index property to minus value -->
    <!-- Footer Ends -->

    <!-- Login Form -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/header">
        <!--  Password Label -->
        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_password"
            android:textColor="#ffffff"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/user_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="#1fa67b"
            android:layout_marginBottom="10dp" />
        <!--  New Password Label -->
        <TextView
            android:id="@+id/textViewNewPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_new_password"
            android:textColor="#ffffff"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/user_new_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="#1fa67b"
            android:layout_marginBottom="10dp" />
        <!--  Confirm New Password Label -->
        <TextView
            android:id="@+id/textViewConfirmNewPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_confirm_new_password"
            android:textColor="#ffffff"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/user_confirm_new_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="#1fa67b"
            android:layout_marginBottom="10dp" />
        <!-- Update button -->
        <Button
            android:id="@+id/btn_user_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/user_btn_update"
            android:backgroundTint="#1fa67b" />
        <!-- Cancel button -->

    </LinearLayout>
    <!-- Login Form Ends -->

</RelativeLayout>
